Mongo client fails with Error: attempt to copy-construct an iterator from a singular iterator.

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Sharding NYC
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      While testing a patch build, this error shows up in one of the tests for evergreen run:
      https://parsley.mongodb.com/resmoke/bc209470685e5078abcf0d977284ff8d/test/176b6138c752b1214d5f30fc4853bf4c?bookmarks=0,39&shareLine=0

      [js_test:server21632] /opt/mongodbtoolchain/revisions/69f4f0673ffcb290ce2307560a4883ecf2ad138c/stow/gcc-v4.35T/include/c++/11.3.0/debug/safe_iterator.h:195:
      [js_test:server21632] In function:
      [js_test:server21632]     __gnu_debug::_Safe_iterator<_Iterator, _Sequence,
      [js_test:server21632]     _Category>::_Safe_iterator(__gnu_debug::_Safe_iterator<_Iterator,
      [js_test:server21632]     _Sequence, _Category>&&) [with _Iterator =
      [js_test:server21632]     std::__cxx1998::_List_iterator<std::shared_ptr<mongo::StreamableReplicaSetMonitor::HostQuery>
      [js_test:server21632]     >; _Sequence =
      [js_test:server21632]     std::__debug::list<std::shared_ptr<mongo::StreamableReplicaSetMonitor::HostQuery>
      [js_test:server21632]     >; _Category = std::forward_iterator_tag]
      [js_test:server21632] 
      [js_test:server21632] Error: attempt to copy-construct an iterator from a singular iterator.
      [js_test:server21632]
      [js_test:server21632] Objects involved in the operation:
      [js_test:server21632]     iterator "this" @ 0x0x7fec5cde62f8 {
      [js_test:server21632]       type = std::__cxx1998::_List_iterator<std::shared_ptr<mongo::StreamableReplicaSetMonitor::HostQuery> > (mutable iterator);
      [js_test:server21632]       state = singular;
      [js_test:server21632]     }
      [js_test:server21632]     iterator "other" @ 0x0x7fec54240ec0 {
      [js_test:server21632]       type = std::__cxx1998::_List_iterator<std::shared_ptr<mongo::StreamableReplicaSetMonitor::HostQuery> > (mutable iterator);
      [js_test:server21632]       state = singular;
      [js_test:server21632]       references sequence with type 'std::__debug::list<std::shared_ptr<mongo::StreamableReplicaSetMonitor::HostQuery>, std::allocator<std::shared_ptr<mongo::StreamableReplicaSetMonitor::HostQuery> > >' @ 0x0x7fec5423c6d8
      [js_test:server21632]     }
      [js_test:server21632] | 2023-06-23T19:43:03.473Z F  CONTROL  6384300 [ReplicaSetMonitor-TaskExecutor] "Writing fatal message","attr":{"message":"\n"}
      [js_test:server21632] | 2023-06-23T19:43:03.474Z F  CONTROL  6384300 [ReplicaSetMonitor-TaskExecutor] "Writing fatal message","attr":{"message":"Got signal: 6 (Aborted).\n"}

            Assignee:
            Adi Zaimi (Inactive)
            Reporter:
            Adi Zaimi (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: